Fix form builder gap (#9524)

--- a/frontend/packages/ux-editor/src/components/config/EditModalContent.module.css
+++ b/frontend/packages/ux-editor/src/components/config/EditModalContent.module.css
@@ -19,7 +19,7 @@
   align-content: center;
 }
 
-.fieldset > div {
+.root > div {
   display: flex;
   flex-direction: column;
   gap: var(--fieldset-gap);
